syntax="proto3";

option go_package = "github.com/rumsrami/givly-rpc-api/pkg/rpc/merchant";

package merchant;

import "google/protobuf/timestamp.proto";

message Merchant {
  // Hash of the email
  string merchantUuid = 1;
  // Created from crypto endpoint
  string merchantCryptoId = 2;
  // Entered on signup
  string storeEmail = 3;
  // Entered on signup
  string storeName = 4;
  // Created on Merchant creation
  google.protobuf.Timestamp createdAt = 5;
}

message CreateMerchantReq {
  // Entered on signup
  string storeEmail = 1;
  // Entered on signup
  string storeName = 2;
  // Created from crypto endpoint
  string merchantCryptoId = 3;
}

message RecipientBalanceReq {
  // Recieved from crypto endpoint
  string recipientCryptoId = 1;
}

message RecipientBalance {
  // Balance of the recipient
  float balance = 1;
}

service MerchantService {
  rpc CreateMerchant(CreateMerchantReq) returns (Merchant){}
  rpc GetRecipientBalance(RecipientBalanceReq) returns (RecipientBalance) {}
}